Added movie compilation mocked response
