# handlers/handler.go
@@ -25,6 +25,11 @@ type ResponseName struct {
 	Name   string `json:"username"`
 }
 
+type ResponseMovieCompilations struct {
+	Status           int                       `json:"status"`
+	MovieCompilation []models.MovieCompilation `json:"moviesCompilation"`
+}
+
 // CreateUserHandler godoc
 // @Summary Creates new user.
 // @Description Create new user in database with validation.
@@ -271,5 +276,81 @@ func LogoutHandler(connRedis *redis.Conn) echo.HandlerFunc {
 			Status:  http.StatusOK,
 			Message: "OK: User is logged out",
 		})
+	}
+}
+
+// GetMovieCompilations godoc
+// @Summary Get Movie Compilations.
+// @Description Get movie compilations for user.
+// @Produce json
+// @Success 	200 {object} Response models.MovieCompilation
+// @Failure		401 {object} Response "ERROR: User is unauthorized"
+// @Failure		500 {object} Response "Internal server error"
+// @Router 		/movieCompilations [get]
+func GetMovieCompilations(dbPool *pgxpool.Pool) echo.HandlerFunc {
+	return func(context echo.Context) error {
+		userID, ok := context.Get("USER_ID").(int64)
+		if !ok {
+			return context.JSON(http.StatusInternalServerError, &Response{
+				Status:  http.StatusInternalServerError,
+				Message: "ERROR: Session required",
+			})
+		}
+
+		if userID == -1 {
+			return context.JSON(http.StatusUnauthorized, &Response{
+				Status:  http.StatusUnauthorized,
+				Message: "ERROR: User is unauthorized",
+			})
+		}
+
+		movieCompilations := []models.MovieCompilation{
+			{
+				Name: "Популярное",
+				Movies: []models.Movie{
+					{
+						Href:  "/",
+						Name:  "Звездные войны1",
+						Genre: "Фантастика1",
+					},
+					{
+						Href:  "/",
+						Name:  "Звездные войны2",
+						Genre: "Фантастика2",
+					},
+					{
+						Href:  "/",
+						Name:  "Звездные войны3",
+						Genre: "Фантастика3",
+					},
+				},
+			},
+			{
+				Name: "Комедии",
+				Movies: []models.Movie{
+					{
+						Href:  "/",
+						Name:  "Звездные войны#1",
+						Genre: "Фантастика",
+					},
+					{
+						Href:  "/",
+						Name:  "Звездные войны#2",
+						Genre: "Фантастика",
+					},
+					{
+						Href:  "/",
+						Name:  "Звездные войны#3",
+						Genre: "Фантастика",
+					},
+				},
+			},
+		}
+
+		return context.JSON(http.StatusOK, &ResponseMovieCompilations{
+			Status:           http.StatusOK,
+			MovieCompilation: movieCompilations,
+		})
+
 	}
 }
